appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- extendedWaitUntil:
      visible:
          id: "input-email"
      timeout: 60000
- tapOn:
    id: "input-email"
- inputText: "cliente@shopdemo.com"
- tapOn:
    id: "input-senha"
- inputText: "123456"

- tapOn:
    point: 94%,92%

- tapOn: "btn-entrar"

- extendedWaitUntil:
    visible: 
        id: "tela-catalogo"
    timeout: 40000

- assertVisible:
    id: "tela-catalogo"